# sleef-sys

./: .appveyor.yml  .gitmodules  .travis.yml  Cargo.toml  build.rs  readme.md
.github/: dependabot.yml
ci/: dox.sh  run-docker.sh  run.sh
ci/docker/aarch64-unknown-linux-gnu/: Dockerfile
ci/docker/i686-unknown-linux-gnu/: Dockerfile
ci/docker/powerpc64le-unknown-linux-gnu/: Dockerfile
examples/: avx.rs
src/: lib.rs
tests/: ffi.rs  hello_world.rs
