[package]
name = "sleef-sys"
version = "0.1.2"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
links = "sleef"
build = "build.rs"
readme = "readme.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/gnzlbg/sleef-sys"
homepage = "https://github.com/gnzlbg/sleef-sys"
documentation = "https://docs.rs/sleef-sys"
categories = ["api-bindings", "external-ffi-bindings", "no-std", "hardware-support"]
keywords = ["simd", "libm", "vector", "math", "ffi"]
description = """
Rust FFI bindings to the SLEEF Vectorized Math Library
"""

[badges]
appveyor = { repository = "gnzlbg/sleef-rs" }
travis-ci = { repository = "gnzlbg/sleef-rs" }
codecov = { repository = "gnzlbg/sleef-rs" }
is-it-maintained-issue-resolution = { repository = "gnzlbg/sleef-rs" }
is-it-maintained-open-issues = { repository = "gnzlbg/sleef-rs" }
maintenance = { status = "experimental" }

[lib]
test = false
bench = false

[dependencies]
libc = { version = "0.2", default-features = false }
cfg-if = "^0.1"

[build-dependencies]
cmake = "^0.1"
bindgen = "^0.51"
env_logger = "0.6"

[features]
default = []
dft = []